--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
   },
   "devDependencies": {
-    "prettier": "^1.18.2"
+    "gatsby-plugin-postcss": "^2.1.13",
+    "prettier": "^1.18.2",
+    "tailwindcss": "^1.1.2"
   },
   "repository": {
     "type": "git",
